classDiagram
    class EmailMessage {
        id : str  (Gmail message id, hex)
        thread_id : str  (Gmail thread id, hex)
        subject : str
        sender : str
        received_at : datetime (UTC)
        snippet : str
        body_text : str
        label_ids : list[str]
        category : Category
        reason : str
        applied_rule : str
        action : str
    }
    class Category {
        <<enumeration>>
        ignore
        notify
        auto_schedule
        user_reply_complete
        auto_draft
        pending
    }
    class LongTermMemory {
        learned_preferences : str  (- name: rule, one per line)
    }
    class TraceEntry {
        at : str (ISO, UTC)
        step : str
        email_id : str
        sender : str
        subject : str
        category : str
        rule : str
        reason : str
        duration_ms : int
    }
    EmailMessage --> Category
    TraceEntry ..> EmailMessage : email_id
